--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-body{background-color:beige}.dark{background-color:#383531}
+body{background-color:beige}body header{background-color:#fff}.darkTheme{background-color:#383531}
