:art: Added seperators to different sections

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -9,6 +9,21 @@ body {
             height: 10vh;
         }
     }
+
+    .introSec {
+        background-color: aqua;
+        height: 50vh;
+    }
+
+    .instructionSec {
+        background-color: rgb(56, 80, 80);
+        height: 50vh;
+    }
+
+    .productSec {
+        background-color: rgb(75, 30, 43);
+        height: 100vh;
+    }
 }
 
 .darkTheme {
