--- a/css/_base.scss
+++ b/css/_base.scss
@@ -9,7 +9,7 @@ body {
         // .headingLogo {
 
             // text-align: center;
-            margin: 0;
+            // margin: 0;
     
         figure {
             position: relative;
@@ -35,48 +35,60 @@ body {
             top: 1.5rem
         }
         nav {
-            // display: flex;
-            // height: 50px;
+            display: flex;
             width: 100%;
-            // background-color: aquamarine;
-            // justify-content: space-between ;
-            ul {
-                margin: 0;
-                display: flex;
-                padding: 0;
-
-                justify-content: space-between;
-            .navList {
-                width: 100%;
-                text-align: center;
-                
-                // justify-content: space-between;
-                // flex-direction: row;
-                // float: left;
-                // padding: 0 16px;
-                a{
-                    display: block;
-                    // height: 100%;
-                    // width: 100%;
-                    // text-align: center;
-                    padding: 14px 14px;
-                    color: #080404;
-                }
-                a:hover {
-                    background-color: #fac450;
-                    color: #080404;
-                  }
-
+            height: 40px;
+            .navButtonCart,
+            .navButtonMenu {
+                flex: 1;
+                border: none;
             }
-            .navSearch {
-                input {
-                    display: block;
-                    margin: 0.5rem;
-                    width: 80%;
-                    float: right;
+            .navButtonCart {
+                svg {
+                    fill: #f3ca6a;
                 }
-              }
-        }
+            }
+            input {
+                flex:2;
+                border: 1px solid #f3ca6a;
+            }
+        //     ul {
+        //         margin: 0;
+        //         display: flex;
+        //         padding: 0;
+
+        //         justify-content: space-between;
+        //     .navList {
+        //         width: 100%;
+        //         text-align: center;
+                
+        //         // justify-content: space-between;
+        //         // flex-direction: row;
+        //         // float: left;
+        //         // padding: 0 16px;
+        //         a{
+        //             display: block;
+        //             // height: 100%;
+        //             // width: 100%;
+        //             // text-align: center;
+        //             padding: 14px 14px;
+        //             color: #080404;
+        //         }
+        //         a:hover {
+        //             background-color: #fac450;
+        //             color: #080404;
+        //           }
+
+        //     }
+        //     .navSearch {
+        //         input {
+        //             display: block;
+        //             margin: 0.5rem;
+        //             width: 80%;
+        //             float: right;
+        //         }
+        //       }
+        // }
         }
     }
 
@@ -98,21 +110,36 @@ body {
         display: inline-block;
         border-bottom: 1px solid #080404;
         width: 20%;
+        top: 2rem;
     }
     .rightDivider {
         position: absolute;
         right: 0;
-        top: 2rem;
     }
     .leftDivider {
         position: absolute;
         left: 0;
-        top: 2rem;
+
     }
 }
     .introSec {
         // background-color: aqua;
         background-color: #fff;
+
+        .reviewsContainer {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            .reviews:nth-child(1) {
+                background-image: url('/Assets/Images/Products/blanding.jpg');
+                height: 100%;
+                width: 100%;
+            }
+            .reviews:nth-child(2) {
+                background-image: url('/Assets/Images/Products/blanding.jpg');
+                height: 100px;
+                width: 100%;
+            }
+        }
     }
 
     .instructionSec {
