--- a/css/_base.scss
+++ b/css/_base.scss
@@ -153,7 +153,7 @@ body {
 				}
 			}
 			.reviews:nth-child(2) {
-				background-image: url('/Assets/Images/Reviews/Review2.jpg');
+				background-image: url('../Assets/Images/Reviews/Review2.jpg');
 				width: 100%;
                 object-fit:contain;
 				img {
@@ -170,11 +170,11 @@ body {
 				}
 			}
 			.reviews:nth-child(3) {
-				background-image: url('/Assets/Images/Reviews/Review2.jpg');
+				background-image: url('../Assets/Images/Reviews/Review2.jpg');
 				width: 100%;
 			}
 			.reviews:nth-child(4) {
-				background-image: url('/Assets/Images/Reviews/Review2.jpg');
+				background-image: url('../Assets/Images/Reviews/Review2.jpg');
 				width: 100%;
 			}
 		}
