--- a/css/_base.scss
+++ b/css/_base.scss
@@ -39,40 +39,130 @@ body {
 			width: 100%;
 			height: 40px;
 			position: relative;
-			.navButtonCart,
-			.navButtonMenu {
+			.navCartBtn,
+			.navMenuBtn {
 				flex: 3;
 				border: none;
 			}
-			.searchBtn {
+			.navSearchBtn {
 				flex: 1;
 				border: 1px solid #f3ca6a;
 				border-left: none;
+                
 			}
-			.navButtonCart:active,
-			.navButtonMenu:active,
-			.searchBtn:active {
+            .navCartBtnFilled { //Om kundvagn har produkter, visa denna färg
+                background-image: linear-gradient(to right,#f3ca6a,pink , rgb(187, 76, 94));
+				// svg {
+				// 	// fill: #f3ca6a;
+				// }
+			}
+            .cartPreview {
+                position: absolute;
+                left: 0;
+                top: 3rem;
+                // border: 1px solid black;
+                background-color: #f3ca6a;
+                width: 350px;
+                height: auto;
+                z-index: 1;
+                border-radius: 3px;
+
+                .cartPreviewArrow {
+                    position: absolute;
+                    left: 2rem;
+                    top: -9px;
+                    background-color: #f3ca6a;
+                    transform: rotate(45deg);
+                    padding: 10px;
+                }
+                .cartPreviewToggle {
+                    justify-content: center;
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                    border: none;
+                    border-radius: 0 10px 0 80px;
+                    padding: 0px 5px 2px 9px;
+                    background-color: rgb(216, 93, 114);
+                }
+				.cartPreviewToggle:hover {
+					background-color: rgb(172, 77, 93)
+
+				}
+                .summaryHeading {
+                    text-align: center;
+                    border-bottom: 1px solid black;
+                }
+
+				.productPreviewSummary {
+					display: flex;
+					// grid-template-columns: repeat(6,1fr)
+					padding: 10px;
+					font-size: 1rem;
+					justify-content: space-evenly;
+
+					li {
+						// margin: 20px;
+					}
+
+					.productPreviewImage {
+					}
+					.previewProductTitle,
+					.previewProductPrice {
+						margin-top: 15px;
+					}
+
+					.previewProductTitle {
+						// margin:0;
+					}
+					.previewProductPrice {
+						// margin: 0;
+					}
+					.previewProductRemoval {
+						margin-top: 10px;
+						border: none;
+						border-radius: 3px;
+					}
+					.previewProductRemoval:hover {
+						background-color: rgb(172, 168, 168);
+					}
+
+				}
+
+
+				.checkoutBtn {
+					border: none;
+					background-color: rgb(252, 246, 246);
+					// text-align: center;
+					width: 100%;
+					margin-bottom: 5px;
+					border-radius: 10px;
+					height: 50px;
+				}
+				.checkoutBtn:hover {
+					background-color: rgb(172, 168, 168);
+				}
+            }
+			.navCartBtn:hover,
+			.navMenuBtn:hover,
+			.navSearchBtn:hover {
 				background-color: #f3ca6a;
 				// color: #ffffff;
 			}
-			.navButtonCart {
-				svg {
-					// fill: #f3ca6a;
-				}
-			}
+
 
 			input {
 				flex: 4;
 				position: relative;
-				height: 36px;
-				width: 100%;
+				// height: 36px;
+				// width: 100%;
 				border: 1px solid #f3ca6a;
 				border-right: none;
 			}
-			// .searchBtn {
-			//     position: absolute;
-			//     top: 0;
-			//     right: -6px;
+			// .navSearchBtn {
+			//     // position: absolute;
+			//     // top: 0;
+			//     // right: -6px;
 			//     height: 100%;
 			//     border:1px solid #FFB406;                // background-color: #fff;
 			// }
