--- a/css/_base.scss
+++ b/css/_base.scss
@@ -1,3 +1,13 @@
+.toggleHide {
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	height: 1px;
+	overflow: hidden;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+  }
+
 body {
 	background-color: rgb(252, 246, 246);
 	header {
@@ -82,8 +92,12 @@ body {
                     top: 0;
                     border: none;
                     border-radius: 0 10px 0 80px;
-                    padding: 0px 5px 2px 9px;
+                    padding: 0px 20px 10px 15px;
                     background-color: rgb(216, 93, 114);
+					font-size: 1.5rem;
+					.cartPreviewToggleBtn {
+						padding: 10px 0 2px 10px;
+					}
                 }
 				.cartPreviewToggle:hover {
 					background-color: rgb(172, 77, 93)
@@ -93,16 +107,20 @@ body {
                     text-align: center;
                     border-bottom: 1px solid black;
                 }
-
+				.productPreviewInfo {
+					display: flex;
+					justify-content:space-evenly;
+					border-bottom: 1px solid #fff;
+				}
 				.productPreviewSummary {
 					display: flex;
 					// grid-template-columns: repeat(6,1fr)
 					padding: 10px;
 					font-size: 1rem;
 					justify-content: space-evenly;
-
+					border-bottom: 1px solid #fff;
 					li {
-						// margin: 20px;
+						// border-top: 1px solid fff;
 					}
 
 					.productPreviewImage {
@@ -118,12 +136,22 @@ body {
 					.previewProductPrice {
 						// margin: 0;
 					}
-					.previewProductRemoval {
-						margin-top: 10px;
+					.productAmountActions {
+						// margin-top: 1rem;
+					.productAmount {
+						width: 1.5rem;
+					}
+				}
+					.previewProductRemoval,
+					.productAmountSub,
+					.productAmountAdd {
+						margin-top: 13px;
 						border: none;
 						border-radius: 3px;
 					}
-					.previewProductRemoval:hover {
+					.previewProductRemoval:hover,
+					.productAmountSub:hover,
+					.productAmountAdd:hover {
 						background-color: rgb(172, 168, 168);
 					}
 
@@ -221,16 +249,16 @@ body {
 			// height: 45vh;
 			.reviews {
 				position: relative;
-                grid-column: span 2;
+                grid-column: span 4;
 
                 background-position: center
 			}
 			.reviews:nth-child(1) {
 				img {
 					filter: blur(5px);
-
+					object-fit: cover;
                     width: 100%;
-                    height: 100%;
+                    // height: 100%;
 				}
 				h3 {
 					position: absolute;
