--- a/css/_base.scss
+++ b/css/_base.scss
@@ -9,7 +9,7 @@
 }
 
 body {
-	// overflow: hidden; 
+	// overflow: hidden;
 	background-color: rgb(252, 246, 246);
 	header {
 		// background-color: #fff;
@@ -115,12 +115,11 @@ body {
 				}
 				ul {
 					display: flex;
-					justify-content:space-around;
+					justify-content: space-around;
 					border-bottom: 1px solid #fff;
 				}
 				.productPreviewInfo {
-
-					justify-content:space-around;
+					justify-content: space-around;
 					// border-bottom: 1px solid #fff;
 					padding: 0;
 				}
@@ -294,11 +293,6 @@ body {
 		}
 	}
 
-	.reviewSec,
-	.instructionSec {
-		height: 50vh;
-	}
-
 	.sectionHeading {
 		text-align: center;
 		margin: 0;
@@ -322,79 +316,120 @@ body {
 			position: absolute;
 			left: 0;
 		}
-	}
 
-	.productSec {
-		// background-color: rgb(75, 30, 43);
-		height: 100vh;
-		background-color: #fff;
-	}
+		.mainSectionWrapper {
+			.reviewSec,
+			.instructionSec {
+				height: 50vh;
+			}
+		
 
-	.instructionSec {
-		.instructionList {
-			display: flex;
-			justify-content: space-evenly;
+		.productSec {
+			// background-color: rgb(75, 30, 43);
+			height: 100vh;
+			background-color: #fff;
+		}
+
+		.instructionSec {
+			.instructionList {
+				display: flex;
+				justify-content: space-evenly;
+			}
+		}
+
+		.reviewSec {
+			// background-color: aqua;
+			background-color: #fff;
+
+			.reviewsContainer {
+				display: grid;
+				grid-template-columns: repeat(4, 1fr);
+				gap: 20px;
+				position: relative;
+				// height: 45vh;
+				.reviews {
+					position: relative;
+					grid-column: span 4;
+
+					background-position: center;
+				}
+				.reviews:nth-child(1) {
+					img {
+						filter: blur(5px);
+						object-fit: cover;
+						width: 100%;
+						// height: 100%;
+					}
+					h3 {
+						position: absolute;
+						top: 3rem;
+					}
+					p {
+						position: absolute;
+						top: 9rem;
+						color: #fff;
+					}
+				}
+				.reviews:nth-child(2) {
+					background-image: url('../Assets/Images/Reviews/Review2.jpg');
+					width: 100%;
+					object-fit: contain;
+					img {
+						filter: blur(5px);
+					}
+					h3 {
+						position: absolute;
+						top: 3rem;
+					}
+					p {
+						position: absolute;
+						top: 9rem;
+						color: #fff;
+					}
+				}
+				.reviews:nth-child(3) {
+					background-image: url('../Assets/Images/Reviews/Review2.jpg');
+					width: 100%;
+				}
+				.reviews:nth-child(4) {
+					background-image: url('../Assets/Images/Reviews/Review2.jpg');
+					width: 100%;
+				}
+			}
 		}
 	}
-
-	.reviewSec {
-		// background-color: aqua;
-		background-color: #fff;
-
-		.reviewsContainer {
+}
+	.orderFormWrapper {
+		height: 100vh;
+		.orderFormSec {
+			width: 85vw;
+			margin: auto;
+			background-color: #ffffff;
+			// display: flex;
+			h3 {
+				text-align: center;
+			}
+			.orderForm {
+				border: none;
 			display: grid;
-			grid-template-columns: repeat(4, 1fr);
-			gap: 20px;
-			position: relative;
-			// height: 45vh;
-			.reviews {
-				position: relative;
-				grid-column: span 4;
+			grid-template-columns: repeat(4,1fr);
+			flex-direction: column;
 
-				background-position: center;
+			width: 80vw;
+			gap: 20px;
+			label {
+				grid-column: 1/span 2;
+				// float: left;
+				// width: 30%;
+				// margin-bottom: 1rem;
 			}
-			.reviews:nth-child(1) {
-				img {
-					filter: blur(5px);
-					object-fit: cover;
-					width: 100%;
-					// height: 100%;
-				}
-				h3 {
-					position: absolute;
-					top: 3rem;
-				}
-				p {
-					position: absolute;
-					top: 9rem;
-					color: #fff;
-				}
+			input {
+				grid-column: 3/span 2;
+				// margin-bottom: 1rem;
+				// width: 100%;
 			}
-			.reviews:nth-child(2) {
-				background-image: url('../Assets/Images/Reviews/Review2.jpg');
-				width: 100%;
-				object-fit: contain;
-				img {
-					filter: blur(5px);
-				}
-				h3 {
-					position: absolute;
-					top: 3rem;
-				}
-				p {
-					position: absolute;
-					top: 9rem;
-					color: #fff;
-				}
-			}
-			.reviews:nth-child(3) {
-				background-image: url('../Assets/Images/Reviews/Review2.jpg');
-				width: 100%;
-			}
-			.reviews:nth-child(4) {
-				background-image: url('../Assets/Images/Reviews/Review2.jpg');
-				width: 100%;
-			}
+		}
+		
 		}
 	}
 
