--- a/css/_base.scss
+++ b/css/_base.scss
@@ -10,7 +10,7 @@
 
 body {
 	// overflow: hidden;
-	background-color: rgb(252, 246, 246);
+	background-color: #ffffff;
 	header {
 		// background-color: #fff;
 		display: flex;
@@ -399,13 +399,38 @@ body {
 		}
 	}
 }
-	.orderFormWrapper {
+	.checkoutWrapper {
 		height: 100vh;
-		.orderFormSec {
+		.checkoutSec {
 			width: 85vw;
 			margin: auto;
-			background-color: #ffffff;
+			background-color: rgb(252, 246, 246);
+			border-radius: 5px;
 			// display: flex;
+		.productCheckoutSummary {
+			padding: 0;
+			.productAdded {
+				display: flex;
+				justify-content: space-between;
+				border-bottom: 1px solid #000000;
+				.productAmount {
+					margin-top:1.5rem;
+				width: 20%;
+					.productAmountValue {
+						width: 20%;
+					}
+				}
+				.productCheckoutImage {
+					margin: 0 0 1rem 1rem;
+					border-radius: 5px;
+				}
+			}
+		}
+			.checkoutInput{
+				border-radius: 5px;
+				border:1px solid #f5c24c;
+				padding: 3px;
+			}
 			h3 {
 				text-align: center;
 			}
@@ -414,7 +439,6 @@ body {
 			display: grid;
 			grid-template-columns: repeat(4,1fr);
 			flex-direction: column;
-
 			width: 80vw;
 			gap: 20px;
 			label {
@@ -425,9 +449,28 @@ body {
 			}
 			input {
 				grid-column: 3/span 2;
+				
+				// border:1px solid rgb(172, 64, 64)
 				// margin-bottom: 1rem;
 				// width: 100%;
 			}
+
+		}
+		.couponCode {
+			border: none;
+		}
+		.paymentChoice {
+			border: none;
+			background-color: rgba($color: #c0a8a8, $alpha: 0.5);
+			margin: auto;
+
+		}
+		.cardPayment,
+		.orderSubmit {
+			display: flex;
+			flex-direction: column;
+			// width: 50%;
+			justify-content: space-between;
 		}
 		
 		}
